--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,12 @@
-name: Release app-service with lib-version
+name: Release app-service
 
 on:
-  repository_dispatch:
-    types: [lib-version-updated]
-
+  push:
+    branches:
+      - main
+      - fix-versioning
+    paths:
+      - "pom.xml"
   workflow_dispatch:
 
 permissions:
@@ -19,19 +22,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Clone lib-version and extract version
+      - name: Extract version from pom.xml
         run: |
-          git clone --branch library-creation-and-release "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository_owner }}/lib-version.git" lib-version
-          VERSION=$(grep -oPm1 "(?<=<version>)[^<]+" lib-version/pom.xml)
+          VERSION=$(xmllint --xpath "/*[local-name()='project']/*[local-name()='version'][not(parent::*/local-name()='parent')]/text()" pom.xml)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "Version detected: $VERSION"
-          # Split
-          MAJOR=$(echo "$VERSION" | cut -d. -f1)
-          MINOR=$(echo "$VERSION" | cut -d. -f2)
-          PATCH=$(echo "$VERSION" | cut -d. -f3)
+
+          # Split version into MAJOR/MINOR/PATCH
+          VERSION_NO_SUFFIX=$(echo "$VERSION" | sed 's/-.*//')
+          MAJOR=$(echo "$VERSION_NO_SUFFIX" | cut -d. -f1)
+          MINOR=$(echo "$VERSION_NO_SUFFIX" | cut -d. -f2)
+          PATCH=$(echo "$VERSION_NO_SUFFIX" | cut -d. -f3)
+
           echo "MAJOR=$MAJOR" >> $GITHUB_ENV
           echo "MINOR=$MINOR" >> $GITHUB_ENV
           echo "PATCH=$PATCH" >> $GITHUB_ENV
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
