--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
 	<properties>
 		<java.version>25</java.version>
+		<lib.version>0.1.1-SNAPSHOT</lib.version>
 	</properties>
 
 	<dependencies>
@@ -25,6 +26,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>dev.doda.team</groupId>
+			<artifactId>lib-version</artifactId>
+			<version>${lib.version}</version>
 		</dependency>
 
 		<dependency>
