Fixed the stable dependency version

--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,9 @@
 
 	<properties>
 		<java.version>25</java.version>
-		<lib.version>0.1.1-SNAPSHOT</lib.version>
+		<lib.version>0.1.0</lib.version>
 	</properties>
+
 
 	<dependencies>
 		<dependency>
@@ -29,7 +30,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>dev.doda.team</groupId>
+			<groupId>releases.dev.doda.team</groupId>
 			<artifactId>lib-version</artifactId>
 			<version>${lib.version}</version>
 		</dependency>
@@ -41,6 +42,19 @@
 		</dependency>
 	</dependencies>
 
+	<repositories>
+		<repository>
+			<id>github-lib-version</id>
+			<name>GitHub Packages - lib-version</name>
+			<url>https://maven.pkg.github.com/doda25-team10/lib-version</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
