--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.5.7</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository to check for updates -->
 	</parent>
 	<groupId>sms</groupId>
 	<artifactId>frontend</artifactId>
@@ -65,3 +65,5 @@
 		</plugins>
 	</build>
 </project>
+
+
