trying to see if it will trigger the action v3

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,11 +2,13 @@ name: Release app-service
 
 on:
   push:
+    branches:
+      - main
+      - workflow-update
     paths:
+      - "pom.xml"
       - "app-service/**"
-  pull_request:
-    paths:
-      - "app-service/**"
+
   workflow_dispatch:
 
 permissions:
